--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                             </div>
                             <div class="detail-row">
                                 <div class="detail-label">網站:</div>
-                                <div class="detail-value"><a href="${website}" target="_blank">${website}</a></div>
+                                <div class="detail-value"><a href="${website}" target="_blank">${name}</a></div>
                             </div>
                             <div class="detail-row">
                                 <div class="detail-label">最後更新:</div>
